[gd_scene load_steps=5 format=2]

[ext_resource path="res://games/draw_shoot/action_buttons/queue.gd" type="Script" id=1]
[ext_resource path="res://games/draw_shoot/action_buttons/available.gd" type="Script" id=2]
[ext_resource path="res://games/draw_shoot/action_buttons/action_buttons.gd" type="Script" id=3]
[ext_resource path="res://games/draw_shoot/action_buttons/player_drop.gd" type="Script" id=4]

[node name="action_buttons" type="Control"]
anchor_right = 1.0
margin_bottom = 120.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="queue" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 20.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 60.0
margin_right = 110.0
margin_bottom = 80.0
text = "Available Actions"
valign = 1

[node name="available" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_top = 80.0
margin_bottom = 120.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player_drop" type="PopupMenu" parent="available"]
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 4 )

[node name="Label2" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 20.0
text = "Action Queue"
valign = 1
[connection signal="action_removed" from="queue" to="." method="_on_queue_action_removed"]
[connection signal="action_chosen" from="available" to="." method="_on_available_action_chosen"]
[connection signal="player_action_chosen" from="available" to="." method="_on_available_player_action_chosen"]
[connection signal="id_pressed" from="available/player_drop" to="available/player_drop" method="_on_player_drop_id_pressed"]
[connection signal="player_selected" from="available/player_drop" to="available" method="_on_player_drop_player_selected"]
